cbits/skia_capi/skparagraph.h

// Returns the index of the glyph that corresponds to the provided coordinate,
// with the top left corner as the origin, and +y direction as down
SK_C_API void skparagraph_paragraph_get_glyph_position_at_coordinate(
    skparagraph_paragraph_t *para, sk_scalar_t x, sk_scalar_t y,
    int32_t *dstPosition, skparagraph_affinity_t *dstAffinity
);
// FontCollection

SK_C_API skparagraph_font_collection_t *skparagraph_font_collection_new(void);
SK_C_API void skparagraph_font_collection_delete(
    skparagraph_font_collection_t *style
);
SK_C_API void skparagraph_font_collection_set_asset_fontmgr(
    skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr
);
SK_C_API void skparagraph_font_collection_set_dynamic_fontmgr(
    skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr
);
SK_C_API void skparagraph_font_collection_set_test_fontmgr(
    skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr
);
SK_C_API void skparagraph_font_collection_set_default_fontmgr(
    skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr
);
SK_C_API void skparagraph_font_collection_set_default_fontmgr_with_def_family(
    skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr,
    const char *defaultFamilyName
);
SK_C_API void skparagraph_font_collection_set_default_fontmgr_with_def_families(
    skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr,
    sk_string_t *defaultFamilyNames[], int defaultFamilyNamesCount
);
SK_C_API void skparagraph_font_collection_enable_font_fallback(
    skparagraph_font_collection_t *col
);
SK_C_API void skparagraph_font_collection_disable_font_fallback(
    skparagraph_font_collection_t *col
);
SK_C_API bool skparagraph_font_collection_font_fallback_enabled(
    skparagraph_font_collection_t *col
);
// Builder

SK_C_API skparagraph_paragraph_builder_impl_t *
skparagraph_paragraph_builder_impl_new(
    skparagraph_paragraph_style_t *style,
    skparagraph_font_collection_t *fontCollection,
    skunicode_skunicode_t *unicode
);
SK_C_API void skparagraph_paragraph_builder_impl_delete(
    skparagraph_paragraph_builder_impl_t *builder
);
SK_C_API void skparagraph_paragraph_builder_add_text_utf8(
    skparagraph_paragraph_builder_t *builder, const char *text
);
SK_C_API void skparagraph_paragraph_builder_add_text_utf8_len(
    skparagraph_paragraph_builder_t *builder, const char *text, size_t len
);