src/Skia/Bindings/Skparagraph.hs


@
void skparagraph_paragraph_get_glyph_position_at_coordinate(skparagraph_paragraph_t *para, sk_scalar_t x, sk_scalar_t y, int32_t *dstPosition, skparagraph_affinity_t *dstAffinity)
@
-}
foreign import ccall "skparagraph_paragraph_get_glyph_position_at_coordinate" skparagraph_paragraph_get_glyph_position_at_coordinate ::
  Ptr (Skparagraph_paragraph) -- ^ C argument @"skparagraph_paragraph_t * para"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t x"@
  -> Sk_scalar -- ^ C argument @"sk_scalar_t y"@
  -> Ptr (Int32) -- ^ C argument @"int32_t * dstPosition"@
  -> Ptr (Skparagraph_affinity) -- ^ C argument @"skparagraph_affinity_t * dstAffinity"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_get_glyph_position_at_coordinate'
foreign import ccall "&skparagraph_paragraph_get_glyph_position_at_coordinate" p'skparagraph_paragraph_get_glyph_position_at_coordinate ::
  FunPtr (Ptr (Skparagraph_paragraph) -> Sk_scalar -> Sk_scalar -> Ptr (Int32) -> Ptr (Skparagraph_affinity) -> IO (()))

{- | C function signature:

@
skparagraph_font_collection_t *skparagraph_font_collection_new(void)
@
-}
foreign import ccall "skparagraph_font_collection_new" skparagraph_font_collection_new ::
  IO (Ptr (Skparagraph_font_collection)) -- ^ C return type: @"skparagraph_font_collection_t *"@

-- | Function pointer to 'skparagraph_font_collection_new'
foreign import ccall "&skparagraph_font_collection_new" p'skparagraph_font_collection_new ::
  FunPtr (IO (Ptr (Skparagraph_font_collection)))

{- | C function signature:

@
void skparagraph_font_collection_delete(skparagraph_font_collection_t *style)
@
-}
foreign import ccall "skparagraph_font_collection_delete" skparagraph_font_collection_delete ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * style"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_delete'
foreign import ccall "&skparagraph_font_collection_delete" p'skparagraph_font_collection_delete ::
  FunPtr (Ptr (Skparagraph_font_collection) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_set_asset_fontmgr(skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr)
@
-}
foreign import ccall "skparagraph_font_collection_set_asset_fontmgr" skparagraph_font_collection_set_asset_fontmgr ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> Ptr (Sk_fontmgr) -- ^ C argument @"sk_fontmgr_t * fontmgr"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_set_asset_fontmgr'
foreign import ccall "&skparagraph_font_collection_set_asset_fontmgr" p'skparagraph_font_collection_set_asset_fontmgr ::
  FunPtr (Ptr (Skparagraph_font_collection) -> Ptr (Sk_fontmgr) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_set_dynamic_fontmgr(skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr)
@
-}
foreign import ccall "skparagraph_font_collection_set_dynamic_fontmgr" skparagraph_font_collection_set_dynamic_fontmgr ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> Ptr (Sk_fontmgr) -- ^ C argument @"sk_fontmgr_t * fontmgr"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_set_dynamic_fontmgr'
foreign import ccall "&skparagraph_font_collection_set_dynamic_fontmgr" p'skparagraph_font_collection_set_dynamic_fontmgr ::
  FunPtr (Ptr (Skparagraph_font_collection) -> Ptr (Sk_fontmgr) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_set_test_fontmgr(skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr)
@
-}
foreign import ccall "skparagraph_font_collection_set_test_fontmgr" skparagraph_font_collection_set_test_fontmgr ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> Ptr (Sk_fontmgr) -- ^ C argument @"sk_fontmgr_t * fontmgr"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_set_test_fontmgr'
foreign import ccall "&skparagraph_font_collection_set_test_fontmgr" p'skparagraph_font_collection_set_test_fontmgr ::
  FunPtr (Ptr (Skparagraph_font_collection) -> Ptr (Sk_fontmgr) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_set_default_fontmgr(skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr)
@
-}
foreign import ccall "skparagraph_font_collection_set_default_fontmgr" skparagraph_font_collection_set_default_fontmgr ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> Ptr (Sk_fontmgr) -- ^ C argument @"sk_fontmgr_t * fontmgr"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_set_default_fontmgr'
foreign import ccall "&skparagraph_font_collection_set_default_fontmgr" p'skparagraph_font_collection_set_default_fontmgr ::
  FunPtr (Ptr (Skparagraph_font_collection) -> Ptr (Sk_fontmgr) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_set_default_fontmgr_with_def_family(skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr, const char *defaultFamilyName)
@
-}
foreign import ccall "skparagraph_font_collection_set_default_fontmgr_with_def_family" skparagraph_font_collection_set_default_fontmgr_with_def_family ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> Ptr (Sk_fontmgr) -- ^ C argument @"sk_fontmgr_t * fontmgr"@
  -> Ptr (CChar) -- ^ C argument @"const char * defaultFamilyName"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_set_default_fontmgr_with_def_family'
foreign import ccall "&skparagraph_font_collection_set_default_fontmgr_with_def_family" p'skparagraph_font_collection_set_default_fontmgr_with_def_family ::
  FunPtr (Ptr (Skparagraph_font_collection) -> Ptr (Sk_fontmgr) -> Ptr (CChar) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_set_default_fontmgr_with_def_families(skparagraph_font_collection_t *col, sk_fontmgr_t *fontmgr, sk_string_t *defaultFamilyNames[], int defaultFamilyNamesCount)
@
-}
foreign import ccall "skparagraph_font_collection_set_default_fontmgr_with_def_families" skparagraph_font_collection_set_default_fontmgr_with_def_families ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> Ptr (Sk_fontmgr) -- ^ C argument @"sk_fontmgr_t * fontmgr"@
  -> Ptr (Ptr (Sk_string)) -- ^ C argument @"sk_string_t *[] defaultFamilyNames"@
  -> CInt -- ^ C argument @"int defaultFamilyNamesCount"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_set_default_fontmgr_with_def_families'
foreign import ccall "&skparagraph_font_collection_set_default_fontmgr_with_def_families" p'skparagraph_font_collection_set_default_fontmgr_with_def_families ::
  FunPtr (Ptr (Skparagraph_font_collection) -> Ptr (Sk_fontmgr) -> Ptr (Ptr (Sk_string)) -> CInt -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_enable_font_fallback(skparagraph_font_collection_t *col)
@
-}
foreign import ccall "skparagraph_font_collection_enable_font_fallback" skparagraph_font_collection_enable_font_fallback ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_enable_font_fallback'
foreign import ccall "&skparagraph_font_collection_enable_font_fallback" p'skparagraph_font_collection_enable_font_fallback ::
  FunPtr (Ptr (Skparagraph_font_collection) -> IO (()))

{- | C function signature:

@
void skparagraph_font_collection_disable_font_fallback(skparagraph_font_collection_t *col)
@
-}
foreign import ccall "skparagraph_font_collection_disable_font_fallback" skparagraph_font_collection_disable_font_fallback ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_font_collection_disable_font_fallback'
foreign import ccall "&skparagraph_font_collection_disable_font_fallback" p'skparagraph_font_collection_disable_font_fallback ::
  FunPtr (Ptr (Skparagraph_font_collection) -> IO (()))

{- | C function signature:

@
_Bool skparagraph_font_collection_font_fallback_enabled(skparagraph_font_collection_t *col)
@
-}
foreign import ccall "skparagraph_font_collection_font_fallback_enabled" skparagraph_font_collection_font_fallback_enabled ::
  Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * col"@
  -> IO (CBool) -- ^ C return type: @"_Bool"@

-- | Function pointer to 'skparagraph_font_collection_font_fallback_enabled'
foreign import ccall "&skparagraph_font_collection_font_fallback_enabled" p'skparagraph_font_collection_font_fallback_enabled ::
  FunPtr (Ptr (Skparagraph_font_collection) -> IO (CBool))

{- | C function signature:

@
skparagraph_paragraph_builder_impl_t *skparagraph_paragraph_builder_impl_new(skparagraph_paragraph_style_t *style, skparagraph_font_collection_t *fontCollection, skunicode_skunicode_t *unicode)
@
-}
foreign import ccall "skparagraph_paragraph_builder_impl_new" skparagraph_paragraph_builder_impl_new ::
  Ptr (Skparagraph_paragraph_style) -- ^ C argument @"skparagraph_paragraph_style_t * style"@
  -> Ptr (Skparagraph_font_collection) -- ^ C argument @"skparagraph_font_collection_t * fontCollection"@
  -> Ptr (Skunicode_skunicode) -- ^ C argument @"skunicode_skunicode_t * unicode"@
  -> IO (Ptr (Skparagraph_paragraph_builder_impl)) -- ^ C return type: @"skparagraph_paragraph_builder_impl_t *"@

-- | Function pointer to 'skparagraph_paragraph_builder_impl_new'
foreign import ccall "&skparagraph_paragraph_builder_impl_new" p'skparagraph_paragraph_builder_impl_new ::
  FunPtr (Ptr (Skparagraph_paragraph_style) -> Ptr (Skparagraph_font_collection) -> Ptr (Skunicode_skunicode) -> IO (Ptr (Skparagraph_paragraph_builder_impl)))

{- | C function signature:

@
void skparagraph_paragraph_builder_impl_delete(skparagraph_paragraph_builder_impl_t *builder)
@
-}
foreign import ccall "skparagraph_paragraph_builder_impl_delete" skparagraph_paragraph_builder_impl_delete ::
  Ptr (Skparagraph_paragraph_builder_impl) -- ^ C argument @"skparagraph_paragraph_builder_impl_t * builder"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_builder_impl_delete'
foreign import ccall "&skparagraph_paragraph_builder_impl_delete" p'skparagraph_paragraph_builder_impl_delete ::
  FunPtr (Ptr (Skparagraph_paragraph_builder_impl) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_builder_add_text_utf8(skparagraph_paragraph_builder_t *builder, const char *text)
@
-}
foreign import ccall "skparagraph_paragraph_builder_add_text_utf8" skparagraph_paragraph_builder_add_text_utf8 ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builder"@
  -> Ptr (CChar) -- ^ C argument @"const char * text"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'skparagraph_paragraph_builder_add_text_utf8'
foreign import ccall "&skparagraph_paragraph_builder_add_text_utf8" p'skparagraph_paragraph_builder_add_text_utf8 ::
  FunPtr (Ptr (Skparagraph_paragraph_builder) -> Ptr (CChar) -> IO (()))

{- | C function signature:

@
void skparagraph_paragraph_builder_add_text_utf8_len(skparagraph_paragraph_builder_t *builder, const char *text, size_t len)
@
-}
foreign import ccall "skparagraph_paragraph_builder_add_text_utf8_len" skparagraph_paragraph_builder_add_text_utf8_len ::
  Ptr (Skparagraph_paragraph_builder) -- ^ C argument @"skparagraph_paragraph_builder_t * builder"@
  -> Ptr (CChar) -- ^ C argument @"const char * text"@
  -> CSize -- ^ C argument @"size_t len"@
  -> IO (()) -- ^ C return type: @"void"@
